--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -12,6 +12,7 @@ body {
     color: black;
     background-color: $primary;
     font-family: $text;
+    overflow-x: hidden;
 }
 
 img {
@@ -181,6 +182,7 @@ header {
 
             .lnr-hand {
                 animation: wave 0.5s ease-in-out;
+                animation-delay: 0.4s;
                 display: inline-block;
                 transform: rotate(-25deg);
                 transform-origin: bottom center;
@@ -389,33 +391,80 @@ main {
     .skills {
 
         text-align: center;
-        padding: $spacing 0;
+        padding: $spacing 0 6rem;
+        background-color: $secondary;
 
         @include mobile {
-            padding: $spacing-mobile 0;
+            padding: $spacing-mobile 0 2.5rem;
         }
 
-        h2 {
-            text-align: center;
-            margin: 0 0 2em;
-            &::after {
-                margin: 0 auto;
+        .wrapper {
+
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            @include mobile {
+                flex-direction: row;
             }
-        }
 
-        img {
-            width: 50px;
-            margin: 0 20px;
-            transition: transform .3s ease-out;
-            &:hover,
-            &focus {
-                transform: scale(1.2);
+            h2 {
+                flex-basis: 100%;
+                text-align: center;
+                margin: 0 0 2em;
+                &::after {
+                    margin: 0 auto;
+                    border-color: $light;
+                }
             }
-        }
+    
+            .skill {
+    
+                background-color: $primary;
+                padding: 1em 1em 0.8em;
+                margin-bottom: 20px;
+                border-radius: 5px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                transition: transform .3s ease-out;
+                    &:hover,
+                    &focus {
+                        transform: scale(1.1);
+                    }
+    
+                svg {        
+                    height: 50px;
+                    fill: $light;
+                }
+                
+                h4 {
+                    font-family: $text;
+                    font-size: 1.2rem;
+                    letter-spacing: 2px;
+                    text-transform: uppercase;
+                    margin-top: 20px;
+                    color: $secondary;
+                }
 
-        .landscape {
-            width: 90px;
+                @include mobile {
+                    margin: 0 10px 20px;
+                }
+    
+            }
+    
+            .skill:not(:last-of-type) {
+                
+                margin-right: 20px;
+                
+                @include mobile {
+                    margin: 0 10px 20px;
+                }
+
+            }
+
         }
+        // end of wrapper
 
     }
     // end of skills
