mobile align left contact section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,7 +24,7 @@ blockquote, q {
 }
 
 blockquote:after, blockquote:before, q:after, q:before {
-  content: '';
+  content: "";
   content: none;
 }
 
@@ -95,7 +95,7 @@ form {
 fieldset {
   border: 1px solid silver;
   margin: 0 2px;
-  padding: .35em .625em .75em;
+  padding: 0.35em 0.625em 0.75em;
 }
 
 legend {
@@ -187,10 +187,10 @@ textarea {
 }
 
 .chromeframe {
-  margin: .2em 0;
+  margin: 0.2em 0;
   background: #ccc;
   color: #000;
-  padding: .2em 0;
+  padding: 0.2em 0;
 }
 
 * {
@@ -260,7 +260,6 @@ a {
   color: #1223E6;
   text-decoration: none;
 }
-
 a:hover, a:focus {
   text-decoration: underline;
 }
@@ -285,18 +284,16 @@ button {
   text-align: center;
   border-radius: 4px;
   text-decoration: none;
-  -webkit-transition: background-color .2s ease-in, color .2s ease-in;
-  transition: background-color .2s ease-in, color .2s ease-in;
+  -webkit-transition: background-color 0.2s ease-in, color 0.2s ease-in;
+  transition: background-color 0.2s ease-in, color 0.2s ease-in;
   border: none;
   -ms-flex-item-align: start;
       align-self: flex-start;
 }
-
 .btn:not(:first-of-type),
 button:not(:first-of-type) {
   margin-left: 20px;
 }
-
 .btn:hover, .btn:focus,
 button:hover,
 button:focus {
@@ -304,16 +301,14 @@ button:focus {
   color: #09ebaf;
   text-decoration: none;
 }
-
 .btn:active,
 button:active {
   position: relative;
   top: 2px;
 }
-
 @media (max-width: 710px) {
   .btn,
-  button {
+button {
     padding: 1.5rem 1.3em 1.3rem;
   }
 }
@@ -322,7 +317,6 @@ button:active {
   background-color: #1223E6;
   color: #F2F2F2;
 }
-
 .btn2:hover, .btn2:focus {
   background-color: #09ebaf;
   color: #1223E6;
@@ -338,19 +332,16 @@ header .top-bar {
           align-items: flex-end;
   margin-bottom: 10px;
 }
-
 @media (max-width: 710px) {
   header .top-bar {
     height: 50px;
   }
 }
-
 header .logo {
   font-size: 3rem;
-  font-family: cy,sans-serif;
+  font-family: cy, sans-serif;
   color: #1223E6;
 }
-
 header .content {
   padding: 18vh 0;
   display: -webkit-box;
@@ -367,13 +358,11 @@ header .content {
       -ms-flex-align: center;
           align-items: center;
 }
-
 @media (max-width: 710px) {
   header .content {
     padding: 8rem 0;
   }
 }
-
 header .content .buttons {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -382,19 +371,16 @@ header .content .buttons {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 header .content h1 {
   font-size: 4rem;
   margin-bottom: 15px;
   text-align: center;
 }
-
 header .content h2 {
   font-size: 2.4rem;
   margin: -5px 0 30px;
   text-align: center;
 }
-
 header .content h5 {
   font-family: forma-djr-micro, sans-serif;
   font-size: 3rem;
@@ -402,7 +388,6 @@ header .content h5 {
   margin-bottom: 20px;
   border-bottom: 2px solid #1223E6;
 }
-
 header .content h5 .lnr-hand {
   -webkit-animation: wave 0.5s ease-in-out;
           animation: wave 0.5s ease-in-out;
@@ -417,13 +402,11 @@ header .content h5 .lnr-hand {
   margin-left: 5px;
   color: #1223E6;
 }
-
 header .content h5 .lnr-hand:hover {
   -webkit-animation: wave 0.5s ease-in-out, wave2 0.5s ease-in-out;
           animation: wave 0.5s ease-in-out, wave2 0.5s ease-in-out;
   color: #09ebaf;
 }
-
 @-webkit-keyframes wave {
   0% {
     -webkit-transform: rotate(-25deg);
@@ -446,7 +429,6 @@ header .content h5 .lnr-hand:hover {
             transform: rotate(-25deg);
   }
 }
-
 @keyframes wave {
   0% {
     -webkit-transform: rotate(-25deg);
@@ -469,7 +451,6 @@ header .content h5 .lnr-hand:hover {
             transform: rotate(-25deg);
   }
 }
-
 @-webkit-keyframes wave2 {
   0% {
     -webkit-transform: rotate(-25deg);
@@ -492,7 +473,6 @@ header .content h5 .lnr-hand:hover {
             transform: rotate(-25deg);
   }
 }
-
 @keyframes wave2 {
   0% {
     -webkit-transform: rotate(-25deg);
@@ -523,7 +503,6 @@ main section .wrapper {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-
 @media (max-width: 710px) {
   main section .wrapper {
     -webkit-box-orient: vertical;
@@ -534,7 +513,6 @@ main section .wrapper {
         flex-wrap: nowrap;
   }
 }
-
 main section .wrapper .left,
 main section .wrapper .right {
   -ms-flex-preferred-size: 50%;
@@ -550,27 +528,22 @@ main section .wrapper .right {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 main section .wrapper .left {
   padding: 8rem 50px 8rem 0;
 }
-
 @media (max-width: 710px) {
   main section .wrapper .left {
     padding: 5rem 0;
   }
 }
-
 main section .wrapper .right {
   padding: 8rem 0 8rem 50px;
 }
-
 @media (max-width: 710px) {
   main section .wrapper .right {
     padding: 5rem 0;
   }
 }
-
 main .subtitle {
   font-family: forma-djr-micro, sans-serif;
   font-weight: 600;
@@ -580,7 +553,6 @@ main .subtitle {
   font-size: 2rem;
   letter-spacing: 1px;
 }
-
 main .subtitle::after {
   content: "";
   display: block;
@@ -588,31 +560,35 @@ main .subtitle::after {
   width: 30px;
   padding-top: 15px;
 }
-
 main .title {
   font-size: 3rem;
-  margin: 1em 0 .8em;
+  margin: 1em 0 0.8em;
   text-align: left;
 }
-
+@media (max-width: 710px) {
+  main .divider {
+    content: "";
+    display: block;
+    border-bottom: 2px solid #1223E6;
+    width: 30px;
+    margin: 0 0 5rem;
+  }
+}
 main .about {
   background: -webkit-gradient(linear, right top, left top, color-stop(65%, #F2F2F2), color-stop(35%, #1223E6));
   background: linear-gradient(-90deg, #F2F2F2 65%, #1223E6 35%);
 }
-
 @media (max-width: 710px) {
   main .about {
     background: -webkit-gradient(linear, left bottom, left top, color-stop(70%, #F2F2F2), color-stop(30%, #1223E6));
     background: linear-gradient(-360deg, #F2F2F2 70%, #1223E6 30%);
   }
 }
-
 main .about .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
 main .about .wrapper .left {
   -ms-flex-preferred-size: 45%;
       flex-basis: 45%;
@@ -624,13 +600,11 @@ main .about .wrapper .left {
       -ms-flex-pack: start;
           justify-content: flex-start;
 }
-
 @media (max-width: 710px) {
   main .about .wrapper .left {
     background: unset;
   }
 }
-
 main .about .wrapper .left .name {
   margin-top: 5px;
   color: white;
@@ -644,50 +618,42 @@ main .about .wrapper .left .name {
           transform-origin: 0 0;
   white-space: nowrap;
 }
-
 @media (max-width: 710px) {
   main .about .wrapper .left .name {
     font-size: 1.6rem;
     top: 5rem;
   }
 }
-
 main .about .wrapper .left img {
   max-width: calc(100% - 50px);
   margin-left: 50px;
 }
-
 @media (max-width: 710px) {
   main .about .wrapper .left img {
     max-width: calc(100% - 40px);
     margin-left: 40px;
   }
 }
-
 main .about .wrapper .right {
   padding-left: 50px;
   -ms-flex-preferred-size: 55%;
       flex-basis: 55%;
 }
-
 @media (max-width: 710px) {
   main .about .wrapper .right {
     padding: 0 0 5rem;
   }
 }
-
 main .skills {
   text-align: center;
   padding: 8rem 0 6rem;
   background-color: #09ebaf;
 }
-
 @media (max-width: 710px) {
   main .skills {
     padding: 5rem 0 2.5rem;
   }
 }
-
 main .skills .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -698,7 +664,6 @@ main .skills .wrapper {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 @media (max-width: 710px) {
   main .skills .wrapper {
     -webkit-box-orient: horizontal;
@@ -707,19 +672,16 @@ main .skills .wrapper {
             flex-direction: row;
   }
 }
-
 main .skills .wrapper h2 {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   text-align: center;
   margin: 0 0 2em;
 }
-
 main .skills .wrapper h2::after {
   margin: 0 auto;
   border-color: #F2F2F2;
 }
-
 main .skills .wrapper .skill {
   background-color: #1223E6;
   padding: 1em 1em 0.8em;
@@ -735,22 +697,19 @@ main .skills .wrapper .skill {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-transition: -webkit-transform .3s ease-out;
-  transition: -webkit-transform .3s ease-out;
-  transition: transform .3s ease-out;
-  transition: transform .3s ease-out, -webkit-transform .3s ease-out;
+  -webkit-transition: -webkit-transform 0.3s ease-out;
+  transition: -webkit-transform 0.3s ease-out;
+  transition: transform 0.3s ease-out;
+  transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
 }
-
 main .skills .wrapper .skill:hover, main .skills .wrapper .skillfocus {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
-
 main .skills .wrapper .skill svg {
   height: 50px;
   fill: white;
 }
-
 main .skills .wrapper .skill h4 {
   font-family: forma-djr-micro, sans-serif;
   font-size: 1.2rem;
@@ -759,27 +718,22 @@ main .skills .wrapper .skill h4 {
   margin-top: 20px;
   color: #09ebaf;
 }
-
 @media (max-width: 710px) {
   main .skills .wrapper .skill {
     margin: 0 10px 20px;
   }
 }
-
 main .skills .wrapper .skill:not(:last-of-type) {
   margin-right: 20px;
 }
-
 @media (max-width: 710px) {
   main .skills .wrapper .skill:not(:last-of-type) {
     margin: 0 10px 20px;
   }
 }
-
 main .portfolio .title {
   margin-bottom: 0.5em;
 }
-
 main .portfolio img {
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
@@ -788,35 +742,29 @@ main .portfolio img {
   transition: filter 0.3s ease-in-out;
   transition: filter 0.3s ease-in-out, -webkit-filter 0.3s ease-in-out;
 }
-
 main .portfolio img:hover {
   -webkit-filter: none;
           filter: none;
 }
-
 @media (max-width: 710px) {
   main .portfolio img {
     -webkit-filter: none;
             filter: none;
   }
 }
-
 main .portfolio .buttons {
   margin-top: 16px;
 }
-
 main .portfolio .project:nth-of-type(odd) {
   background: -webkit-gradient(linear, left top, right top, color-stop(65%, #F2F2F2), color-stop(35%, #1223E6));
   background: linear-gradient(90deg, #F2F2F2 65%, #1223E6 35%);
 }
-
 @media (max-width: 710px) {
   main .portfolio .project:nth-of-type(odd) {
     background: -webkit-gradient(linear, left bottom, left top, color-stop(75%, #F2F2F2), color-stop(25%, #1223E6));
     background: linear-gradient(360deg, #F2F2F2 75%, #1223E6 25%);
   }
 }
-
 main .portfolio .project:nth-of-type(odd) .wrapper .right {
   -ms-flex-preferred-size: 45%;
       flex-basis: 45%;
@@ -824,7 +772,6 @@ main .portfolio .project:nth-of-type(odd) .wrapper .right {
   background: -webkit-gradient(linear, left top, right top, color-stop(50%, #F2F2F2), color-stop(50%, #1223E6));
   background: linear-gradient(90deg, #F2F2F2 50%, #1223E6 50%);
 }
-
 @media (max-width: 710px) {
   main .portfolio .project:nth-of-type(odd) .wrapper .right {
     -webkit-box-ordinal-group: 0;
@@ -833,30 +780,25 @@ main .portfolio .project:nth-of-type(odd) .wrapper .right {
     background: none;
   }
 }
-
 main .portfolio .project:nth-of-type(odd) .wrapper .left {
   -ms-flex-preferred-size: 55%;
       flex-basis: 55%;
 }
-
 @media (max-width: 710px) {
   main .portfolio .project:nth-of-type(odd) .wrapper .left {
     padding-top: 0;
   }
 }
-
 main .portfolio .project:nth-of-type(even) {
   background: -webkit-gradient(linear, right top, left top, color-stop(65%, white), color-stop(35%, #1223E6));
   background: linear-gradient(-90deg, white 65%, #1223E6 35%);
 }
-
 @media (max-width: 710px) {
   main .portfolio .project:nth-of-type(even) {
     background: -webkit-gradient(linear, left bottom, left top, color-stop(75%, white), color-stop(25%, #1223E6));
     background: linear-gradient(-360deg, white 75%, #1223E6 25%);
   }
 }
-
 main .portfolio .project:nth-of-type(even) .wrapper .left {
   -ms-flex-preferred-size: 45%;
       flex-basis: 45%;
@@ -864,93 +806,89 @@ main .portfolio .project:nth-of-type(even) .wrapper .left {
   background: -webkit-gradient(linear, right top, left top, color-stop(50%, white), color-stop(50%, #1223E6));
   background: linear-gradient(-90deg, white 50%, #1223E6 50%);
 }
-
 @media (max-width: 710px) {
   main .portfolio .project:nth-of-type(even) .wrapper .left {
     background: none;
   }
 }
-
 main .portfolio .project:nth-of-type(even) .wrapper .right {
   background-color: white;
   -ms-flex-preferred-size: 55%;
       flex-basis: 55%;
 }
-
 @media (max-width: 710px) {
   main .portfolio .project:nth-of-type(even) .wrapper .right {
     padding-top: 0;
   }
 }
-
 main .education {
   padding: 8rem 0;
   background-color: #09ebaf;
 }
-
 @media (max-width: 710px) {
   main .education {
     padding: 5rem 0;
   }
 }
-
 main .education .wrapper {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 main .education .wrapper .title {
   font-size: 2.5rem;
   margin-bottom: 0.4em;
 }
-
 main .education .wrapper .subtitle::after {
   border-color: #F2F2F2;
 }
-
 main .education .wrapper p {
   margin-bottom: 0;
 }
-
 main .contact {
   padding: 8rem 0 0;
   background-color: #F2F2F2;
 }
-
 @media (max-width: 710px) {
   main .contact {
     padding: 5rem 0;
   }
 }
-
 main .contact .wrapper .subtitle {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   text-align: center;
 }
-
+@media (max-width: 710px) {
+  main .contact .wrapper .subtitle {
+    text-align: unset;
+  }
+}
 main .contact .wrapper .subtitle::after {
   margin: 0 auto;
 }
-
+@media (max-width: 710px) {
+  main .contact .wrapper .subtitle::after {
+    margin: 0;
+  }
+}
 main .contact .wrapper h3 {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   margin: 1em 0 5px;
   text-align: center;
 }
-
+@media (max-width: 710px) {
+  main .contact .wrapper h3 {
+    text-align: unset;
+  }
+}
 @media (max-width: 710px) {
   main .contact .wrapper .btn {
     margin: 0;
-    -ms-flex-item-align: unset;
-        -ms-grid-row-align: unset;
-        align-self: unset;
   }
 }
-
 main .contact .wrapper .left {
   -ms-flex-preferred-size: 45%;
       flex-basis: 45%;
@@ -958,44 +896,34 @@ main .contact .wrapper .left {
       -ms-flex-pack: start;
           justify-content: flex-start;
 }
-
 @media (max-width: 710px) {
   main .contact .wrapper .left {
-    padding: 5rem 0;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    padding: 2rem 0 5rem 0;
   }
 }
-
 main .contact .wrapper .left ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin: 20px 0 18px;
 }
-
 main .contact .wrapper .left ul svg {
   width: 25px;
   margin-right: 15px;
   fill: #09ebaf;
 }
-
 main .contact .wrapper .left ul svg:hover, main .contact .wrapper .left ul svg:focus {
   fill: #1223E6;
 }
-
 main .contact .wrapper .right {
   -ms-flex-preferred-size: 55%;
       flex-basis: 55%;
 }
-
 @media (max-width: 710px) {
   main .contact .wrapper .right {
     padding: 0;
   }
 }
-
 main .contact .wrapper form {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1005,7 +933,6 @@ main .contact .wrapper form {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 main .contact .wrapper form input,
 main .contact .wrapper form textarea {
   font-family: forma-djr-micro, sans-serif;
@@ -1016,37 +943,30 @@ main .contact .wrapper form textarea {
   color: #1223E6;
   border-radius: 4px;
 }
-
-main .contact .wrapper form input::-webkit-input-placeholder,
-main .contact .wrapper form textarea::-webkit-input-placeholder {
+main .contact .wrapper form input::-webkit-input-placeholder, main .contact .wrapper form textarea::-webkit-input-placeholder {
   opacity: 1;
 }
-
-main .contact .wrapper form input:-ms-input-placeholder,
-main .contact .wrapper form textarea:-ms-input-placeholder {
+main .contact .wrapper form input::-moz-placeholder, main .contact .wrapper form textarea::-moz-placeholder {
   opacity: 1;
 }
-
-main .contact .wrapper form input::-ms-input-placeholder,
-main .contact .wrapper form textarea::-ms-input-placeholder {
+main .contact .wrapper form input:-ms-input-placeholder, main .contact .wrapper form textarea:-ms-input-placeholder {
   opacity: 1;
 }
-
+main .contact .wrapper form input::-ms-input-placeholder, main .contact .wrapper form textarea::-ms-input-placeholder {
+  opacity: 1;
+}
 main .contact .wrapper form input::placeholder,
 main .contact .wrapper form textarea::placeholder {
   opacity: 1;
 }
-
 main .contact .wrapper form input:focus,
 main .contact .wrapper form textarea:focus {
   background-color: #1223E6;
   color: #F2F2F2;
 }
-
 main .contact .wrapper form textarea {
   height: 200px;
 }
-
 main .contact .wrapper form button {
   font-family: forma-djr-micro, sans-serif;
   -ms-flex-item-align: end;
