--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 a, abbr, acronym, address, applet, article, aside, audio, b, big, blockquote, body, canvas, caption, center, cite, code, dd, del, details, dfn, div, dl, dt, em, embed, fieldset, figcaption, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, html, i, iframe, img, ins, kbd, label, legend, li, mark, menu, nav, object, ol, output, p, pre, q, ruby, s, samp, section, small, span, strike, strong, sub, summary, sup, table, tbody, td, tfoot, th, thead, time, tr, tt, u, ul, var, video {
   margin: 0;
   padding: 0;
@@ -639,6 +640,11 @@ main .about .wrapper .right {
   -ms-flex-preferred-size: 55%;
       flex-basis: 55%;
 }
+@media (max-width: 820px) {
+  main .about .wrapper .right {
+    padding-left: 40px;
+  }
+}
 @media (max-width: 710px) {
   main .about .wrapper .right {
     padding: 0 0 5rem;
@@ -823,7 +829,7 @@ main .portfolio .project:nth-of-type(odd) .wrapper .right {
 }
 main .education {
   padding: 8rem 0;
-  background-color: #09ebaf;
+  background-color: #1223E6;
 }
 @media (max-width: 710px) {
   main .education {
@@ -840,11 +846,70 @@ main .education .wrapper .title {
   font-size: 2.5rem;
   margin-bottom: 0.4em;
 }
+main .education .wrapper .subtitle {
+  color: #09ebaf;
+}
 main .education .wrapper .subtitle::after {
   border-color: #F2F2F2;
 }
+main .education .wrapper .title, main .education .wrapper p, main .education .wrapper li {
+  color: white;
+}
 main .education .wrapper p {
   margin-bottom: 0;
+}
+main .experience {
+  background-color: #09ebaf;
+}
+main .experience .wrapper .columns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 8rem;
+}
+@media (max-width: 820px) {
+  main .experience .wrapper .columns {
+    gap: 5rem;
+  }
+}
+@media (max-width: 710px) {
+  main .experience .wrapper .columns {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 0;
+  }
+}
+main .experience .wrapper .columns div {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 0px;
+          flex: 1 1 0px;
+}
+main .experience .wrapper .columns div h4 {
+  color: #1223E6;
+  margin-top: 5px;
+  margin-bottom: 15px;
+}
+main .experience .wrapper .columns div h4 + p {
+  margin-top: 20px;
+}
+main .experience .wrapper .subtitle {
+  color: #1223E6;
+}
+main .experience .wrapper .title, main .experience .wrapper p, main .experience .wrapper li {
+  color: black;
+}
+main .experience .wrapper ul {
+  margin-top: 10px;
+}
+main .experience .wrapper ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+main .experience .wrapper ul li::before {
+  content: "→";
+  margin-right: 10px;
+  vertical-align: 10%;
 }
 main .contact {
   padding: 8rem 0 0;
