--- a/styles/sass/_mixins.scss
+++ b/styles/sass/_mixins.scss
@@ -9,3 +9,13 @@
     @content;
   }
 }
+
+@mixin animate($animation,$duration,$method,$times){
+  animation: $animation $duration $method $times;
+}
+
+@mixin keyframes($name){
+  @keyframes #{$name}{
+      @content;
+  }
+}
